// Licensed to SolID under one or more contributor
// license agreements. See the NOTICE file distributed with
// this work for additional information regarding copyright
// ownership. SolID licenses this file to you under
// the Apache License, Version 2.0 (the "License"); you may
// not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.

syntax = "proto3";

package oidc.core.v1;

option go_package = "oidc/core/v1;corev1";

import "google/protobuf/wrappers.proto";

// ClientType describes OIDC Client type enumeration.
// https://tools.ietf.org/html/rfc6749#section-2.1
enum ClientType {
  // Default value
  CLIENT_TYPE_INVALID = 0;
  // Explicit unknown
  CLIENT_TYPE_UNKNOWN = 1;
  // Clients capable of maintaining the confidentiality of their
  // credentials (e.g., client implemented on a secure server with
  // restricted access to the client credentials), or capable of secure
  // client authentication using other means.
  CLIENT_TYPE_CONFIDENTIAL = 2;
  // Clients incapable of maintaining the confidentiality of their
  // credentials (e.g., clients executing on the device used by the
  // resource owner, such as an installed native application or a web
  // browser-based application), and incapable of secure client
  // authentication via any other means.
  CLIENT_TYPE_PUBLIC = 3;
}

// Client defines internal OIDC client properties.
message Client {
  string client_id = 1;
  ClientType client_type = 2;
  repeated string redirect_uris = 3;
  repeated string response_types = 4;
  repeated string grant_types = 5;
  google.protobuf.StringValue application_type = 6;
  repeated string contacts = 7;
  google.protobuf.StringValue client_name = 8;
  google.protobuf.StringValue logo_uri = 9;
  google.protobuf.StringValue client_uri = 10;
  google.protobuf.StringValue policy_uri = 11;
  google.protobuf.StringValue tos_uri = 12;
  google.protobuf.StringValue jwks_uri = 13;
  google.protobuf.BytesValue jwks = 14;
}
